--- a/rtl/style.css
+++ b/rtl/style.css
@@ -373,6 +373,13 @@ ul {
   background: url(assets/images/background/bg4.png);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+
+}
+@media  only screen and (max-width: 767px){
+  .bg4{
+    background-position: left;
+  }
 }
 .bg5 {
   background: url(assets/images/background/bg5.png);
