--- a/en/assets/css/responsive.css
+++ b/en/assets/css/responsive.css
@@ -93,6 +93,9 @@
 	.pl-104 {
 		padding-left: 0;
 	}
+	.rs-banner .banner-device{
+		width: 260px !important;
+	}
 	.bg2 {
 		background-position: center;
 	}
@@ -463,5 +466,10 @@
 		height: 30px;
 		line-height: 27px;
 		font-size: 20px;
+	}
+}
+@media (min-width: 992px) and (max-width: 1199px){
+	.rs-header .menu-area .main-menu .rs-menu ul.nav-menu li{
+		margin-right: 11px;
 	}
 }
